11.0.0 (October XX, 2024)
 - Added support for targeting rules based on large segments for browsers.
 - Added `factory.destroy()` method, which invokes the `destroy` method of all clients created by the factory.
 - Updated @splitsoftware/splitio-commons package to version 2.0.0 that includes major updates and updated some transitive dependencies for vulnerability fixes.
 - BREAKING CHANGES:
    - Renamed distribution folders from `/lib` to `/cjs` for CommonJS build, and `/es` to `/esm` for EcmaScript Modules build.
    - Drop support for NodeJS v6. The SDK now requires NodeJS v14 or above.

10.28.0 (September 6, 2024)
 - Updated @splitsoftware/splitio-commons package to version 1.17.0 that includes minor updates:
    - Added `sync.requestOptions.getHeaderOverrides` configuration option to enhance SDK HTTP request Headers for Authorization Frameworks.
    - Updated some transitive dependencies for vulnerability fixes.

10.27.0 (June 25, 2024)
 - Added `sync.requestOptions.agent` option to SDK configuration for NodeJS. This allows passing a custom NodeJS HTTP(S) Agent with specific configurations for the SDK requests, like custom TLS settings or a network proxy (See https://help.split.io/hc/en-us/articles/360020564931-Node-js-SDK#proxy).
 - Updated some transitive dependencies for vulnerability fixes.

10.26.1 (June 14, 2024)
 - Updated the internal imports of 'os' and 'ioredis' modules for NodeJS, to use EcmaScript 'import' rather than CommonJS 'require' for the ES modules build. This avoids runtime errors on some scenarios when bundling the SDK into a .mjs file or importing it from a .mjs file.
 - Updated eventsource dependency for NodeJS. The eventsource v1.1.2 dependency was removed, and the SDK now uses an embedded adaptation that can accept an HTTP(S) agent option, like other HTTP(S) requests.
 - Updated @splitsoftware/splitio-commons package to version 1.16.0 that includes some vulnerability and bug fixes.